Multires Unsubdivide freezes Blender with hidden geoemtry #99887

Closed
opened 2022-07-21 12:56:57 +02:00 by Julien Kaspar · 8 comments
Member

System Information
Operating system: Linux-5.15.0-41-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.73.05

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-21 08:18, hash: ee3facd087

Short description of error
In the Multiresolution modifier the buttons "Unsubdivide" and "Rebuild Subdivisions" do a similar operation.
When having any faces in edit/sculpt mode hidden though, using any of these operators will freeze Blender.

Exact steps for others to reproduce the error

  • Subdivide Cube a couple times
  • Apply modifier
  • In edit mode, hide some faces
  • Add multires modifier (Don't add any more subdivisions)
  • Use "Unsubdivide" or "Rebuild Subdivisions"

#99887.blend

**System Information** Operating system: Linux-5.15.0-41-generic-x86_64-with-glibc2.35 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.73.05 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-21 08:18, hash: `ee3facd087` **Short description of error** In the Multiresolution modifier the buttons "Unsubdivide" and "Rebuild Subdivisions" do a similar operation. When having any faces in edit/sculpt mode hidden though, using any of these operators will freeze Blender. **Exact steps for others to reproduce the error** - Subdivide Cube a couple times - Apply modifier - In edit mode, hide some faces - Add multires modifier (Don't add any more subdivisions) - Use "Unsubdivide" or "Rebuild Subdivisions" [#99887.blend](https://archive.blender.org/developer/F13701692/T99887.blend)
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

I was able to reproduce this on multiple Linux machines. Not sure when this was introduced. Could be an issue that was there since the feature was added.

I was able to reproduce this on multiple Linux machines. Not sure when this was introduced. Could be an issue that was there since the feature was added.
Author
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar
Author
Member

@JosephEagar Can you take a look at this?

@JosephEagar Can you take a look at this?
Member

Is this still happening? I wasn't able to reproduce it, Hans may have fixed it in his recent hiding patches.

Is this still happening? I wasn't able to reproduce it, Hans may have fixed it in his recent hiding patches.
Author
Member

@JosephEagar Yes I can still reproduce the crash following the steps above.

@JosephEagar Yes I can still reproduce the crash following the steps above.
Philipp Oeser removed the
Interest
Sculpt, Paint & Texture
label 2023-02-10 09:11:14 +01:00
Raul Fernandez Hernandez self-assigned this 2024-04-23 22:00:58 +02:00

Can confirm this still happens, just repro on 4.2 main and MacOS.
Just to be sure: what is the expected result of this operation?
to process the mesh ignoring the edit mode hidden faces?

Can confirm this still happens, just repro on 4.2 main and MacOS. Just to be sure: what is the expected result of this operation? to process the mesh ignoring the edit mode hidden faces?
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-05-07 18:05:07 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99887
No description provided.